2002-05-25  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Event): Events should also register if they do
	implement the methods that an interface requires.

	* typemanager.cs (MemberLookup); use the new GetInterfaces
	method. 

	(GetInterfaces): The code used to lookup interfaces for a type is
	used in more than one place, factor it here. 

	* driver.cs: Track the errors at the bottom of the file, we kept
	on going.

	* delegate.cs (NewDelegate.Emit): We have to emit a null as the
	instance if the method we are calling is static!

2002-05-24  Miguel de Icaza  <miguel@ximian.com>

	* attribute.cs (ApplyAttributes): Make this function filter out
	the IndexerName attribute (as that attribute in reality is never
	applied) and return the string constant for the IndexerName
	attribute. 

	* class.cs (TypeContainer.Emit): Validate that all the indexers
	have the same IndexerName attribute, and if so, set the
	DefaultName attribute on the class. 

	* typemanager.cs: The return value might contain other stuff (not
	only methods).  For instance, consider a method with an "Item"
	property and an Item method.

	* class.cs: If there is a problem with the parameter types,
	return. 

2002-05-24  Ravi Pratap  <ravi@ximian.com>

	* ecore.cs (ImplicitConversionExists): Wrapper function which also
	looks at user defined conversion after making a call to 
	StandardConversionExists - we need this for overload resolution.

	* expression.cs : Update accordingly the various method calls.

	This fixes 2 bugs filed against implicit user defined conversions 

2002-05-22  Miguel de Icaza  <miguel@ximian.com>

	* statement.cs: Track the result of the assignment.

2002-05-21  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (MemberAccess): Improved error reporting for
	inaccessible members.

2002-05-22  Martin Baulig  <martin@gnome.org>

	* makefile (mcs-mono2.exe): New target.  This is mcs compiled with
	itself with debugging support.

2002-05-22  Martin Baulig  <martin@gnome.org>
